--- a/PlanetWallet/Resources/4_Main.storyboard
+++ b/PlanetWallet/Resources/4_Main.storyboard
@@ -131,10 +131,10 @@
                                             <rect key="frame" x="0.0" y="210.5" width="375" height="119.5"/>
                                             <subviews>
                                                 <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" alignment="center" spacing="9" translatesAutoresizingMaskIntoConstraints="NO" id="cxp-rY-NMa">
-                                                    <rect key="frame" x="133.5" y="27" width="108" height="65"/>
+                                                    <rect key="frame" x="133.5" y="20" width="108" height="79"/>
                                                     <subviews>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Rigel-III" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9QB-wS-Ubw" customClass="PWLabel" customModule="PlanetWallet" customModuleProvider="target">
-                                                            <rect key="frame" x="13" y="0.0" width="82" height="28"/>
+                                                            <rect key="frame" x="8" y="0.0" width="92" height="35"/>
                                                             <fontDescription key="fontDescription" name="WorkSans-SemiBold" family="Work Sans" pointSize="24"/>
                                                             <color key="textColor" red="0.99607843137254903" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                             <nil key="highlightedColor"/>
@@ -145,7 +145,7 @@
                                                             </userDefinedRuntimeAttributes>
                                                         </label>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0x124A…bEF9" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="V2s-Rl-Lg9" customClass="PWLabel" customModule="PlanetWallet" customModuleProvider="target">
-                                                            <rect key="frame" x="0.0" y="37" width="108" height="28"/>
+                                                            <rect key="frame" x="0.0" y="44" width="108" height="35"/>
                                                             <fontDescription key="fontDescription" name="WorkSans-Regular" family="Work Sans" pointSize="16"/>
                                                             <color key="textColor" name="detailTextDark"/>
                                                             <nil key="highlightedColor"/>
@@ -228,6 +228,16 @@
                                     <userDefinedRuntimeAttribute type="image" keyPath="themeRightImage" value="imageToolbarMutiuniverseBlue"/>
                                 </userDefinedRuntimeAttributes>
                             </view>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Your Planet Keep safe here" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jLA-gy-bOK">
+                                <rect key="frame" x="0.0" y="545" width="375" height="42"/>
+                                <color key="backgroundColor" red="1" green="0.0" blue="0.31372549019607843" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="42" id="yCQ-e9-ODo"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="WorkSans-Regular" family="Work Sans" pointSize="14"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ImE-pt-fi9">
                                 <rect key="frame" x="0.0" y="587" width="375" height="240"/>
                                 <subviews>
@@ -254,7 +264,7 @@
                                         </constraints>
                                     </view>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="13.9829341" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Pa4-sM-5ti" customClass="PWLabel" customModule="PlanetWallet" customModuleProvider="target">
-                                        <rect key="frame" x="75" y="37" width="95.5" height="21"/>
+                                        <rect key="frame" x="75" y="37" width="96.5" height="21"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="21" id="niQ-cw-lMP"/>
                                         </constraints>
@@ -263,7 +273,7 @@
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Planet" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gnN-eW-fcF" customClass="PWLabel" customModule="PlanetWallet" customModuleProvider="target">
-                                        <rect key="frame" x="75" y="17" width="39.5" height="16"/>
+                                        <rect key="frame" x="75" y="17" width="43.5" height="16"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="16" id="8gD-YX-lO6"/>
                                         </constraints>
@@ -277,7 +287,7 @@
                                         </userDefinedRuntimeAttributes>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="BTC" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="g0d-MI-xsW" customClass="PWLabel" customModule="PlanetWallet" customModuleProvider="target">
-                                        <rect key="frame" x="174.5" y="37" width="36" height="21"/>
+                                        <rect key="frame" x="175.5" y="37" width="36" height="21"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="21" id="77m-yn-2JY"/>
                                         </constraints>
@@ -333,12 +343,15 @@
                         <constraints>
                             <constraint firstItem="k7D-IZ-L6L" firstAttribute="bottom" secondItem="ImE-pt-fi9" secondAttribute="top" constant="80" id="0Hl-wE-bqD"/>
                             <constraint firstItem="Na1-r1-juP" firstAttribute="leading" secondItem="gpI-PO-C1H" secondAttribute="leadingMargin" constant="-34" id="11R-mj-J29"/>
+                            <constraint firstItem="ImE-pt-fi9" firstAttribute="top" secondItem="jLA-gy-bOK" secondAttribute="bottom" id="3cH-KH-B2s"/>
                             <constraint firstItem="k7D-IZ-L6L" firstAttribute="trailing" secondItem="ImE-pt-fi9" secondAttribute="trailing" id="9gj-cY-uzO"/>
                             <constraint firstItem="3px-DW-HXl" firstAttribute="leading" secondItem="k7D-IZ-L6L" secondAttribute="leading" id="K4H-CB-1Q9"/>
+                            <constraint firstItem="jLA-gy-bOK" firstAttribute="trailing" secondItem="k7D-IZ-L6L" secondAttribute="trailing" id="QsO-KK-xoy"/>
                             <constraint firstItem="Na1-r1-juP" firstAttribute="top" secondItem="gpI-PO-C1H" secondAttribute="top" constant="-100" id="RYa-rQ-ufP"/>
                             <constraint firstItem="sj3-TY-bbB" firstAttribute="trailing" secondItem="gpI-PO-C1H" secondAttribute="trailing" id="X4L-Lx-9xI"/>
                             <constraint firstItem="sj3-TY-bbB" firstAttribute="leading" secondItem="gpI-PO-C1H" secondAttribute="leading" id="bB6-i9-szl"/>
                             <constraint firstItem="ImE-pt-fi9" firstAttribute="leading" secondItem="k7D-IZ-L6L" secondAttribute="leading" id="cXj-hJ-jAg"/>
+                            <constraint firstItem="jLA-gy-bOK" firstAttribute="leading" secondItem="k7D-IZ-L6L" secondAttribute="leading" id="ca2-cy-3FW"/>
                             <constraint firstItem="3px-DW-HXl" firstAttribute="top" secondItem="gpI-PO-C1H" secondAttribute="top" id="eUA-jk-IPd"/>
                             <constraint firstItem="sj3-TY-bbB" firstAttribute="top" secondItem="gpI-PO-C1H" secondAttribute="top" id="hLk-nm-JbQ"/>
                             <constraint firstItem="3px-DW-HXl" firstAttribute="trailing" secondItem="k7D-IZ-L6L" secondAttribute="trailing" id="lwd-gS-jQw"/>
@@ -363,6 +376,7 @@
                         <outlet property="darkDimGradientView" destination="wqQ-cu-t5w" id="3au-Rp-ygi"/>
                         <outlet property="footerView" destination="tqV-Mi-NOI" id="oBP-tD-TWu"/>
                         <outlet property="headerView" destination="gy3-pp-zw7" id="IfF-5E-YaS"/>
+                        <outlet property="labelError" destination="jLA-gy-bOK" id="T9t-nT-i2U"/>
                         <outlet property="lightDimGradientView" destination="Ff0-ee-A5F" id="9aj-Af-G38"/>
                         <outlet property="naviBar" destination="3px-DW-HXl" id="47j-DX-T4G"/>
                         <outlet property="planetView" destination="tw9-My-Aoq" id="0TN-RP-rzC"/>
